--- a/.github/workflows/install-lint-test-on-ubuntu.yml
+++ b/.github/workflows/install-lint-test-on-ubuntu.yml
@@ -23,6 +23,7 @@ jobs:
       mysql:
         image: mysql:latest
         env:
+          MYSQL_RANDOM_ROOT_PASSWORD: "yes"
           MYSQL_USER: root
           MYSQL_PASSWORD: password
           MYSQL_DATABASE: test
