--- a/.github/workflows/install-lint-test-on-ubuntu.yml
+++ b/.github/workflows/install-lint-test-on-ubuntu.yml
@@ -23,8 +23,8 @@ jobs:
       mysql:
         image: mysql:latest
         env:
-          MYSQL_RANDOM_ROOT_PASSWORD: "yes"
-          MYSQL_PASSWORD: password
+          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+          MYSQL_USER: root
           MYSQL_DATABASE: test
         ports:
           - 3306:3306
@@ -64,5 +64,5 @@ jobs:
         env:
           LEPTON_API_KEY: ${{ secrets.LEPTON_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          MYSQL_PASSWORD: password
-          MYSQL_DATABASE: test
+          DB_NAME: test
+          DB_USERNAME: root
