ci: install alembic

--- a/.github/workflows/install-lint-test-on-ubuntu.yml
+++ b/.github/workflows/install-lint-test-on-ubuntu.yml
@@ -55,6 +55,9 @@ jobs:
             sleep 5
           done
 
+      - name: Install Alembic
+        run: pip install alembic
+
       - name: Run Migrations
         run: |
           python -m alembic upgrade head
