ci: init alembic

--- a/.github/workflows/install-lint-test-on-ubuntu.yml
+++ b/.github/workflows/install-lint-test-on-ubuntu.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Install Alembic
         run: pip install alembic
 
+      - name: Initialize Alembic
+        run: alembic init alembic
+
       - name: Run Migrations
         run: |
           python -m alembic upgrade head
