ci: install MySQL driver

--- a/.github/workflows/install-lint-test-on-ubuntu.yml
+++ b/.github/workflows/install-lint-test-on-ubuntu.yml
@@ -55,6 +55,9 @@ jobs:
             sleep 5
           done
 
+      - name: Install MySQL Driver
+        run: pip install pymysql
+
       - name: Install Alembic
         run: pip install alembic
 
