--- a/examples/llamarine/Makefile
+++ b/examples/llamarine/Makefile
@@ -1,2 +1,2 @@
 streamlit-run:
-	@poetry run streamlit run streamlit-main.py --server.allowRunOnSave=true --server.runOnSave=true
+	@poetry run streamlit run app.py --server.allowRunOnSave=true --server.runOnSave=true
