--- a/examples/llamarine/Dockerfile
+++ b/examples/llamarine/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.12-slim
 WORKDIR /app
 
 # Install git and any other system dependencies
-RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends git && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file and install dependencies
 COPY requirements.txt /app/
