--- a/examples/llamarine/Dockerfile
+++ b/examples/llamarine/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.12-slim
 WORKDIR /app
 
 # Install git and any other system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends git && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends git=1:2.39.5-0+deb12u1 && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file and install dependencies
 COPY requirements.txt /app/
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application code
 COPY . /app
 
-# Expose port 8501 (default Streamlit port)
+# Expose Streamlit port
 EXPOSE 8501
 
 # Run the Streamlit app
