Adapt RAG to use Ollama

--- a/examples/FinanceBench/requirements.txt
+++ b/examples/FinanceBench/requirements.txt
@@ -1,1 +1,3 @@
 OpenSSA[contrib] @ https://GitHub.com/Aitomatic/OpenSSA/archive/examples/FinanceBench.zip
+llama-index-embeddings-ollama
+llama-index-llms-ollama
