--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "openssa"
-version = "0.24.10.10"
+version = "0.24.9.30"
 
 authors = [
   "Aitomatic, Inc. <engineering@aitomatic.com>",
@@ -92,7 +92,7 @@ httpx = ">=0.27"
 loguru = ">=0.7"
 pydantic = ">=2.9"
 python-dotenv = ">=1.0"
-torch = ">=2.2,<2.3"  # 2.3 fails installing on Mac with M chip
+torch = ">=2.2"  # 2.3 fails installing on Mac with M chip
 tqdm = ">=4.66"
 
 # optional dependencies required by extras
@@ -101,7 +101,6 @@ streamlit-extras = {version = ">=0.4", optional = true}
 streamlit-mic-recorder = {version = ">=0.0.8", optional = true}
 
 langchainhub = ">=0.1"
-faiss-cpu = ">=1.8"
 
 [tool.poetry.extras]
 contrib = [
@@ -112,7 +111,6 @@ contrib = [
 
 langchain = [
   "langchainhub",
-  "faiss-cpu",
 ]
 
 
