--- a/.ruff.toml
+++ b/.ruff.toml
@@ -127,6 +127,7 @@ ignore = [
   "RUF017",  # Avoid quadratic list summation"
   "RUF018",  # avoid assignment expressions in `assert` statements
   "RUF022",  # __all__` is not sorted
+  "RUF051",  # Use `pop` instead of `key in dict` followed by `del dict[key]`
   "RUF100",  # unused `noqa` directive
   "S101",  # use of `assert` detected
   "S106",  # possible hardcoded password assigned to argument
