--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
 
   // FLAKE8
   // ======
+  // marketplace.visualstudio.com/items?itemName=ms-python.flake8
 
   // Arguments passed to Flake8 for linting Python files.
   // Each argument should be provided as a separate string in the array.
@@ -54,14 +55,14 @@
     "info": "Information",
     "refactor": "Hint",
     "warning": "Warning"
-  },	
+  },
 
   // Path or command to be used by the extension to lint Python files with Flake8.
   // Accepts an array of a single or multiple strings.
   // If passing a command, each argument should be provided as a separate string in the array.
   // If set to ["flake8"], it will use the version of Flake8 available in the PATH environment variable.
   // Note: Using this option may slowdown linting.
-  // "flake8.path": [], 
+  // "flake8.path": [],
 
   // Path to a Python executable or a command that will be used to launch the Flake8 server and any subprocess.
   // Accepts an array of a single or multiple strings.
@@ -81,9 +82,6 @@
   // Controls when notifications are shown by this extension.
   // Accepted values are onError, onWarning, always and off.
   "flake8.showNotification": "onWarning",
-
-  // Enable linting Python files with Flake8 as you type.
-  "flake8.lintOnChange": true,
 
   // Configure glob patterns as supported by the fnmatch Python library (https://docs.python.org/3/library/fnmatch.html)
   // to exclude files or folders from being linted with Flake8.
