--- a/examples/japanese-demo-knowledge-program/pyproject.toml
+++ b/examples/japanese-demo-knowledge-program/pyproject.toml
@@ -1,15 +1,13 @@
-[tool.poetry]
-name = "openssa-sample"
+[project]
+name = "japanese-demo"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = ">=3.12,<3.13"
-openssa = "^0.24.3.12"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.13"
+dependencies = [
+    "loguru>=0.7.3",
+    "openssa>=0.24.12.12",
+    "python-dotenv>=1.1.0",
+    "pyyaml>=6.0.2",
+    "streamlit>=1.44.1",
+]
