don't run CI tests when only .md files are changed

--- a/.github/workflows/install-lint-test-on-mac.yml
+++ b/.github/workflows/install-lint-test-on-mac.yml
@@ -4,10 +4,14 @@ on:
   push:
     branches:
       - "*"
+    paths-ignore:
+      - '**/*.md'
 
   pull_request:
     branches:
       - "*"
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   install-lint-test-on-mac:
